Fixed post details username not showing issue

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,11 @@ html{
   margin-left: 450px;
 }
 
+.admin-account{
+  margin-left: 200px;
+  margin-bottom: 50px;
+}
+
 
 .page-title{
   font-family: 'Josefin Sans', sans-serif;
